# AfterGlow

./: .dockerignore  .gitignore  Dockerfile  IEx  LICENSE  README.md  Session.vim  build.sh  dockerrunexample.txt  license.txt  mix.exs  start.sh
.docker/: nginx.conf  odbcinst.ini
.undodir/: %home%adityau%.EverVim%coc-settings.json  %home%adityau%.nvim%init.vim  %home%adityau%.zshrc  %home%adityau%workspace%AfterGlow%NERD_tree_1  %home%adityau%workspace%AfterGlow%frontend%app%app.js  %home%adityau%workspace%AfterGlow%frontend%app%mixins%utils-functions.js  %home%adityau%workspace%AfterGlow%frontend%app%pods%settings%controller.js  %home%adityau%workspace%AfterGlow%frontend%app%pods%settings%reports%controller.js  %home%adityau%workspace%AfterGlow%frontend%app%pods%settings%reports%template.hbs  %home%adityau%workspace%AfterGlow%frontend%app%pods%settings%template.hbs  %home%adityau%workspace%AfterGlow%frontend%app%pods%settings%version%controller.js  %home%adityau%workspace%AfterGlow%frontend%app%router.js  (+13 more)
backend/: Cargo.toml  build.rs  cert.pem  diesel.toml  response.xml  rustc-ice-2023-12-04T10_27_23-32342.txt  rustc-ice-2023-12-04T10_57_59-54770.txt  rustc-ice-2023-12-04T11_03_20-55353.txt  rustc-ice-2023-12-04T11_03_20-55358.txt
backend/crud_derive/: Cargo.toml
backend/crud_derive/src/: lib.rs
backend/locals/samael/: Cargo.toml
backend/locals/samael/src/: crypto.rs
backend/locals/samael/src/service_provider/: mod.rs
backend/migrations/2023-10-28-050937_init/: down.sql  up.sql
backend/migrations/2023-10-28-060937_background_jobs/: up.sql
backend/migrations/2023-11-27-111640_create_scheduled_jobs/: down.sql  up.sql
backend/migrations/2023-12-02-083004_add_subject_to_schedule/: down.sql  up.sql
backend/migrations/2024-03-09-162857_results_cache_unique/: down.sql  up.sql
backend/src/: app.rs  controllers.rs  errors.rs  main.rs  repository.rs  response_text.rs  router.rs  seeds.rs  views.rs
backend/src/app/api_actions/: mod.rs
backend/src/app/auth/: mod.rs
backend/src/app/autocomplete/: mod.rs
backend/src/app/bg_jobs/: mod.rs  pg_queue.rs  scheduled_worker.rs  worker.rs
backend/src/app/bg_jobs/jobs/: dashboard_mailer.rs  mod.rs  send_csv.rs  sync_db.rs  visualization_mailer.rs
backend/src/app/dashboards/: mod.rs
backend/src/app/databases/: mod.rs
backend/src/app/questions/: config.rs  mod.rs
backend/src/app/results/: helpers.rs  mod.rs  payload_adapter.rs
backend/src/app/results/adapters/: mod.rs  postgres.rs  redshift.rs
backend/src/app/results/query_builders/: mod.rs  postgres.rs  redshift.rs  sql_base.rs
backend/src/app/results/query_terms/: filters.rs  groups.rs  mod.rs  sorts.rs  views.rs
backend/src/app/schedule/: mod.rs
backend/src/app/settings/: init_config.rs  limit.rs  mod.rs  reports.rs  s3_config.rs  saml.rs  theme.rs
backend/src/app/visualizations/: mod.rs  renderer_config.rs  viz.rs
backend/src/config/: permissions.rs
backend/src/controllers/: api_action.rs  auth.rs  autocomplete.rs  base.rs  column.rs  common.rs  dashboard.rs  database.rs  helpers.rs  note.rs  organization.rs  organization_setting.rs  permission_set.rs  question.rs  result.rs  setting.rs  snippet.rs  table.rs  tag.rs  team.rs  user.rs  user_setting.rs  variable.rs  visualization.rs
backend/src/repository/: api_action.rs  bg_job.rs  column.rs  dashboard.rs  database.rs  models.rs  note.rs  organization.rs  organization_setting.rs  permission_set.rs  permissions.rs  question.rs  results_cache.rs  schedule.rs  schema.rs  settings.rs  snippet.rs  table.rs  tag.rs  team.rs  user.rs  user_permission_set.rs  user_setting.rs  variable.rs  visualization.rs
backend/src/views/: dashboard.rs  database.rs  question.rs  table.rs  team.rs  user.rs  visualization_mailer_schedule.rs  visualizations.rs
backend/templates/: chart.html  csv_link.html  csv_mail.html  preview_data.html  theme.html
config/: config.exs  (+4 more)
(+871 files in other folders)
