[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
dotenv = "0.15.0"
chrono = { version = "0.4.9", features=["serde"] }
bigdecimal = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
uuid = {version = "1.4.1", features = ["serde", "v4"] }
actix-web = "4.4.0"
env_logger = "0.10.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
oauth2 = "4.4.1"
reqwest = { version = "0.11.20", features = ["json"] }
lazy_static = "1.4.0"
actix-web-lab = "0.19.1"
futures = "0.3.28"
actix-web-grants = "3.0.2"
crud_derive = { path = "./crud_derive" }
base64 = "0.21.4"

tokio = { version = "1.4", features = ["full"] }

tokio-postgres = {version = "0.7.2", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"]}
r2d2 = "0.8.9"
r2d2_postgres = "0.18"

derive_more = "0.99.17"
regex = "1.10.2"
ulid = { version = "0.4", features = ["uuid"] }

async-trait = "0.1.74"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
