[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "extras"] }
dotenv = "0.15.0"
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
actix-web = "4.4.0"
env_logger = "0.10.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.7"
oauth2 = "4.4.1"
reqwest = { version = "0.11.20", features = ["json"] }
lazy_static = "1.4.0"
actix-web-lab = "0.19.1"
futures = "0.3.28"
actix-web-grants = "3.0.2"
crud_derive = { path = "./crud_derive" }
base64 = "0.21.4"

tokio = { version = "1.4", features = ["full"] }

tokio-postgres = { version = "0.7.2", features = [
  "with-serde_json-1",
  "with-uuid-1",
  "with-chrono-0_4",
] }

derive_more = "0.99.17"
regex = "1.10.2"
ulid = { version = "0.4", features = ["uuid"] }

async-trait = "0.1.74"
deadpool-postgres = { version = "0.11.0", features = ["serde"] }
csv = "1.3.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
rstml = "0.11.2"
lettre = { version = "0.11.1", features = ["tokio1", "tokio1-native-tls"] }
mime = "0.3.17"
handlebars = "4.4.0"
askama = "0.12.1"
rust_decimal = { version = "1.33.1", features = ["db-tokio-postgres"] }
fancy-regex = "0.12.0"
sqlparser = "0.39.0"
chrono-tz = { version = "0.8.4", features = ["serde"] }
clap = "4.4.11"
diesel_migrations = { version = "2.1.0", features = ["postgres"] }

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
