[package]
name = "crud_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "1.0", features=["full"] }
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11"
chrono = { version = "0.4.9", features=["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
diesel = { version = "2.1.0", features = ["postgres", "extras"] }

[lib]
proc-macro = true

